--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "node-version": "echo Node version: && node --version",
     "docusaurus": "docusaurus",
     "start": "docusaurus start --poll",
     "build": "docusaurus build",
@@ -12,8 +13,8 @@
     "clear": "docusaurus clear"
   },
   "dependencies": {
-    "@docusaurus/core": "^3.5.2",
-    "@docusaurus/preset-classic": "^3.5.2"
+    "@docusaurus/core": "^3.6.3",
+    "@docusaurus/preset-classic": "^3.6.3"
   },
   "browserslist": {
     "production": [
