Update workflow to use Node 18

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Install and Build
+      uses: actions/setup-node@v1
+      with:
+        node-version: '18.x'
       run:  |
         npm install 
         npm run build
