--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,13 +7,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Install and Build
+    - name: Set up Node.js
       uses: actions/setup-node@v1
       with:
         node-version: '18.x'
-      run:  |
-        npm install 
-        npm run build
+    - name: Install Dependencies
+      run: npm install
+    - name: Build
+      run: npm run build
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@4.0.0
       with:
